# SecureRAG-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/meridian/: calendar.json  employees.csv  employees.json  projects.json  tickets.csv
data/meridian/documents/: acceptable_use_policy.md  acquisition_target_analysis.md  approval_matrix_2025.md  approval_matrix_2026.md  board_minutes_q1_2026.md  board_minutes_q4_2025.md  code_of_conduct.md  compensation_analysis_2026.md  data_classification_policy.md  expense_policy_2025.md  expense_policy_2026.md  hr_handbook.md  incident_response_playbook.md  onboarding_checklist.md  org_chart.md  project_atlas_design_doc.md  project_horizon_briefing.md  project_phoenix_postmortem.md  quarterly_financials_q1_2026.md  regulatory_compliance_memo.md  role_definitions.md  security_training_2026.md  vendor_security_assessment.md
data/raw/: acquisition_target_analysis.txt  board_meeting_minutes_q1.txt  budget_forecast_2026.txt  compensation_analysis_2026.txt  hr_records.json  incident_postmortem_2026_03.txt  pending_litigation_summary.txt  platform_migration_plan.txt  quarterly_financials_q1_2026.txt  regulatory_compliance_memo.txt  termination_review_e003.txt  vendor_security_assessment.txt
docs/: AGENTIC_PIVOT_PLAN.md  ARCHITECTURE.md  DATASET_DESIGN.md  FORK_ORIGIN.md  PHASE_2_DESIGN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_6_PLAN.md  PROJECT_COMPLETE.md  THREAT_MODEL.md  TOOL_SURFACE.md
eval/: agentic_queries.jsonl  loader.py  reporter.py  run_eval.py  runner.py  schema.py
eval/results/: baseline_2026-04-17.md
reports/: promptfoo_pipeline_v1.md
scripts/: ingest_meridian.py
src/: api.py  audit.py  chain.py  exceptions.py  rate_limiter.py
src/agent/: audit_sink.py  graph.py  prompts.py  retriever.py  state.py  wrapper.py
src/agent/tools/: __init__.py  auth.py  escalate_to_human.py  get_approval_chain.py  get_ticket_detail.py  list_calendar_events.py  list_my_tickets.py  lookup_employee.py  registry.py  search_documents.py
src/data/: loaders.py
src/ingestion/: pipeline.py
src/loaders/: hr_record_loader.py  loader_factory.py
src/retrieval/: access_controlled.py
src/sanitizers/: classification_extractor.py  classification_guard.py  credential_detector.py  embedding_detector.py  gate.py  injection_scanner.py  output_scanner.py  pii_detector.py
src/securerag_agent/: api.py  model_integrity.py  rate_limiter.py
src/securerag_agent/agent/: graph.py  prompts.py  retriever.py  state.py  wrapper.py
src/securerag_agent/data/: loaders.py
src/securerag_agent/ingestion/: pipeline.py
tests/: test_access_control.py  test_api.py  test_audit.py  test_chain.py  test_classification_extractor.py  test_classification_guard.py  test_credential_detector.py  test_embedding_detector.py  test_gate.py  test_injection_scanner.py  test_loaders.py  test_model_integrity.py  test_output_scanner.py  test_pii_detector.py  test_rate_limiter.py
tests/agent/: test_api.py  test_audit_sink.py  test_audit_trail.py  test_auth.py  test_basic_loop.py  test_cross_tool_flow.py  test_escalate_to_human.py  test_get_approval_chain.py  test_get_ticket_detail.py  test_graph.py  test_list_calendar_events.py  test_list_my_tickets.py  test_lookup_employee.py  test_retriever.py  test_state.py  test_tool_node.py  test_wrapper.py
tests/data/: test_dataset_integrity.py
tests/eval/: test_loader.py  test_reporter.py  test_runner.py  test_schema.py
tests/ingestion/: test_meridian_pipeline.py
(+21 files in other folders)
