[project]
name = "securerag-agent"
version = "0.1.0"
description = "Security-hardened agentic RAG pipeline with tool-level access control. Fork of SecureRAG-Sentinel adapted for agentic threat model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "presidio-analyzer",
    "presidio-anonymizer",
    "pypdf",
    "ollama",
    "httpx",
    "fastapi",
    "uvicorn",
    "langgraph>=1.1.8",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires Ollama with llama-guard3:1b",
]
