[project]
name = "securerag-agent"
version = "0.1.0"
description = "Security-hardened agentic RAG pipeline with tool-level access control. Fork of SecureRAG-Sentinel adapted for agentic threat model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "presidio-analyzer",
    "presidio-anonymizer",
    "pypdf",
    "ollama",
    "httpx",
    "fastapi",
    "uvicorn",
    "langgraph>=1.1.8",
    "langchain-ollama>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires Ollama with llama-guard3:1b",
]

[tool.mypy]
strict = true

# Sentinel-inherited sanitizer modules have not been upgraded to strict
# typing yet. Suppress their errors so `mypy --strict src/api.py` stays
# clean on files we own; these modules are tracked separately.
[[tool.mypy.overrides]]
module = [
    "src.sanitizers.injection_scanner",
    "src.sanitizers.credential_detector",
    "src.sanitizers.classification_guard",
    "src.sanitizers.output_scanner",
    "src.audit",
]
ignore_errors = true
