[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securerag-agent"
version = "0.1.0"
description = "Security-hardened agentic RAG pipeline with tool-level access control. Fork of SecureRAG-Sentinel adapted for agentic threat model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "presidio-analyzer",
    "presidio-anonymizer",
    "pypdf",
    "ollama",
    "httpx",
    "fastapi",
    "uvicorn",
    "langgraph>=1.1.8",
    "langchain-ollama>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/securerag_agent"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: requires Ollama with llama-guard3:1b",
]

[tool.mypy]
strict = true

# Sentinel-inherited sanitizer modules have not been upgraded to strict
# typing yet. Suppress their errors so `mypy --strict` on files we own
# stays clean; these modules are tracked separately.
[[tool.mypy.overrides]]
module = [
    "securerag_agent.sanitizers.injection_scanner",
    "securerag_agent.sanitizers.credential_detector",
    "securerag_agent.sanitizers.classification_guard",
    "securerag_agent.sanitizers.output_scanner",
    "securerag_agent.audit",
]
ignore_errors = true
